# OpenJCVM

./: CMakeLists.txt  README.md
include/: applet.h  base.h  cardapplet.h  classcomponent.h  component.h  constantpool.h  descriptor.h  directory.h  export.h  header.h  import.h  installer.h  javaclass.h  javalang.h  jni.h  library.h  mask.h  method.h  native.h  opcode.h  profile.h  readijc.h  referenceLocation.h  staticfield.h  vm.h
src/: CMakeLists.txt
src/vm/: .vm.cpp.swp  CMakeLists.txt  installer.cpp  javaclass.cpp  javalang.cpp  jni.cpp  library.cpp  openjcvm.cpp  readijc.cpp  testreaddescriptor.cpp  testreadijc.cpp  testreadux.cpp  vm.cpp
testdata/: Descriptor.cap  ShortAdd.ijc
